Creation and display of the character's list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MarvelApp</string>
+    <string name="title_activity_characters_list_screen">CharactersListScreen</string>
 </resources>
